--- a/vk_group_members_ipynb.ipynb
+++ b/vk_group_members_ipynb.ipynb
@@ -51,13 +51,13 @@
       ],
       "metadata": {
         "id": "vuSZjIjUzlW1",
-        "outputId": "e00c4790-8261-4b39-f9f3-e28ce648b309",
+        "outputId": "eec23782-6821-4153-b5cd-40834e93ab43",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 246
         }
       },
-      "execution_count": 1,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -66,8 +66,8 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: vk==2.0.2 in /usr/local/lib/python3.7/dist-packages (2.0.2)\n",
             "Requirement already satisfied: requests<3.0,>=2.8 in /usr/local/lib/python3.7/dist-packages (from vk==2.0.2) (2.23.0)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests<3.0,>=2.8->vk==2.0.2) (2022.6.15)\n",
             "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests<3.0,>=2.8->vk==2.0.2) (1.24.3)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests<3.0,>=2.8->vk==2.0.2) (2022.6.15)\n",
             "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests<3.0,>=2.8->vk==2.0.2) (3.0.4)\n",
             "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests<3.0,>=2.8->vk==2.0.2) (2.10)\n"
           ]
@@ -79,7 +79,7 @@
             "Downloading...\n",
             "From: https://raw.githubusercontent.com/Newborn1937/zdetect/main/vk_utils.py\n",
             "To: /content/vk_utils.py\n",
-            "8.29kB [00:00, 4.31MB/s]                   \n"
+            "8.29kB [00:00, 11.7MB/s]                   \n"
           ]
         },
         {
@@ -93,7 +93,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 5
         }
       ]
     },
@@ -108,7 +108,7 @@
       "metadata": {
         "id": "iGlWGEnO0WTs"
       },
-      "execution_count": 2,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -119,18 +119,18 @@
       ],
       "metadata": {
         "id": "4a-iEL5l-REe",
-        "outputId": "d4100d03-d384-4a79-8268-42ea0004d46d",
+        "outputId": "5cf81d90-7754-4d2a-fc43-ce70767025a2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/gdrive\n"
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
           ]
         }
       ]
@@ -143,7 +143,10 @@
         "import pickle\n",
         "\n",
         "# Put group names or indices here\n",
-        "group_idx = {'russia', 'zogolovok'}\n",
+        "#group_idx = {'russia', 'zogolovok'}\n",
+        "group_idx = {'putin_z', 'vladimir_vladimirovichp', 'putin_govorit', 'putintoday',\n",
+        "             'putin_vs_veteran', 'moskvaputinu', 'putin_2014', 'putin_lider',\n",
+        "             'moy_putin', 'putineveryday'}\n",
         "\n",
         "dirpath_out = '/content/gdrive/MyDrive/vk_group_members'\n",
         "\n",
@@ -165,12 +168,12 @@
       ],
       "metadata": {
         "id": "DdZt5piozzQV",
-        "outputId": "74100e99-9b33-4edd-ee1a-daf18cd6c4b3",
+        "outputId": "3dd56f7c-bb07-4a08-984e-bdc9e37bdcbe",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,7 +186,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "79059it [00:16, 4873.01it/s]                           \n"
+            "79059it [00:15, 4995.84it/s]                           \n"
           ]
         },
         {
@@ -197,7 +200,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "79019it [00:15, 4997.79it/s]                           \n"
+            "100%|██████████| 79020/79020 [00:16<00:00, 4873.63it/s]\n"
           ]
         }
       ]
