Создано с помощью Colaboratory

--- a/vk_group_members_ipynb.ipynb
+++ b/vk_group_members_ipynb.ipynb
@@ -51,13 +51,13 @@
       ],
       "metadata": {
         "id": "vuSZjIjUzlW1",
-        "outputId": "eec23782-6821-4153-b5cd-40834e93ab43",
+        "outputId": "8f31c19b-cf39-4337-9b65-8494c500b080",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 246
         }
       },
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -66,10 +66,10 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Requirement already satisfied: vk==2.0.2 in /usr/local/lib/python3.7/dist-packages (2.0.2)\n",
             "Requirement already satisfied: requests<3.0,>=2.8 in /usr/local/lib/python3.7/dist-packages (from vk==2.0.2) (2.23.0)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests<3.0,>=2.8->vk==2.0.2) (1.24.3)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests<3.0,>=2.8->vk==2.0.2) (2022.6.15)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests<3.0,>=2.8->vk==2.0.2) (2.10)\n",
             "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests<3.0,>=2.8->vk==2.0.2) (3.0.4)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests<3.0,>=2.8->vk==2.0.2) (2.10)\n"
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests<3.0,>=2.8->vk==2.0.2) (2022.6.15)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests<3.0,>=2.8->vk==2.0.2) (1.24.3)\n"
           ]
         },
         {
@@ -79,7 +79,7 @@
             "Downloading...\n",
             "From: https://raw.githubusercontent.com/Newborn1937/zdetect/main/vk_utils.py\n",
             "To: /content/vk_utils.py\n",
-            "8.29kB [00:00, 11.7MB/s]                   \n"
+            "8.29kB [00:00, 5.41MB/s]                   \n"
           ]
         },
         {
@@ -93,7 +93,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 9
         }
       ]
     },
@@ -108,7 +108,7 @@
       "metadata": {
         "id": "iGlWGEnO0WTs"
       },
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -119,12 +119,12 @@
       ],
       "metadata": {
         "id": "4a-iEL5l-REe",
-        "outputId": "5cf81d90-7754-4d2a-fc43-ce70767025a2",
+        "outputId": "9ea83a2d-25c7-41d8-f9f8-0cd12c5bba30",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,12 +168,12 @@
       ],
       "metadata": {
         "id": "DdZt5piozzQV",
-        "outputId": "3dd56f7c-bb07-4a08-984e-bdc9e37bdcbe",
+        "outputId": "74100e99-9b33-4edd-ee1a-daf18cd6c4b3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,7 +186,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "79059it [00:15, 4995.84it/s]                           \n"
+            "79059it [00:16, 4873.01it/s]                           \n"
           ]
         },
         {
@@ -200,7 +200,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 79020/79020 [00:16<00:00, 4873.63it/s]\n"
+            "79019it [00:15, 4997.79it/s]                           \n"
           ]
         }
       ]
