Create a notebook for z-avatar stats

--- a/user_reg_dynamics.ipynb
+++ b/user_reg_dynamics.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Newborn1937/zdetect/blob/main/user_reg_dynamics.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -73,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 2,
       "metadata": {
         "id": "xDrvwHHfnPEt"
       },
@@ -183,8 +183,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "putin_z\n",
             "vladimir_vladimirovichp\n",
@@ -233,8 +233,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/tmp/ipython-input-2448924509.py:14: RuntimeWarning:\n",
             "\n",
@@ -263,17 +263,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 3,
       "metadata": {
         "id": "zvSLkj9KWpPt"
       },
       "outputs": [],
       "source": [
+        "from reg_dates import get_user_reg_date\n",
+        "\n",
         "if need_get_reg_dates:\n",
         "  # Get registration dates for the user ID bins via an external service\n",
         "  hbin_dates = []\n",
         "  for hbin in tqdm(hbins):\n",
-        "    hbin_dates.append(vk_utils.get_user_reg_date(int(hbin)))\n",
+        "    hbin_dates.append(get_user_reg_date(int(hbin)))\n",
         "\n",
         "  # Try to fill None dates\n",
         "  for n in range(1, len(hbin_dates) - 1):\n",
@@ -373,7 +375,6 @@
       },
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
             "text/html": [
               "<html>\n",
@@ -409,7 +410,8 @@
               "</html>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
       ],
       "source": [
@@ -457,20 +459,12 @@
       },
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "                group_name  post/pre\n",
-              "0                  putin_z  2.950794\n",
-              "1  vladimir_vladimirovichp  3.415996\n",
-              "2            putin_govorit  2.349270\n",
-              "3               putintoday  3.693759\n",
-              "4             moskvaputinu  2.463181\n",
-              "5              putin_lider  2.815712\n",
-              "6                moy_putin  2.858974\n",
-              "7            putineveryday  1.697531\n",
-              "8                zogolovok  0.880663"
-            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "summary": "{\n  \"name\": \"Q\",\n  \"rows\": 9,\n  \"fields\": [\n    {\n      \"column\": \"group_name\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 9,\n        \"samples\": [\n          \"putineveryday\",\n          \"vladimir_vladimirovichp\",\n          \"putin_lider\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"post/pre\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.8618745583546708,\n        \"min\": 0.8806626098715348,\n        \"max\": 3.693759071117561,\n        \"num_unique_values\": 9,\n        \"samples\": [\n          1.6975308641975306,\n          3.415996425379802,\n          2.815712187958884\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}",
+              "type": "dataframe",
+              "variable_name": "Q"
+            },
             "text/html": [
               "\n",
               "  <div id=\"df-c0faee67-7f4f-437b-9cdc-928301666cf9\" class=\"colab-df-container\">\n",
@@ -810,13 +804,21 @@
               "    </div>\n",
               "  </div>\n"
             ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "dataframe",
-              "variable_name": "Q",
-              "summary": "{\n  \"name\": \"Q\",\n  \"rows\": 9,\n  \"fields\": [\n    {\n      \"column\": \"group_name\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 9,\n        \"samples\": [\n          \"putineveryday\",\n          \"vladimir_vladimirovichp\",\n          \"putin_lider\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"post/pre\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.8618745583546708,\n        \"min\": 0.8806626098715348,\n        \"max\": 3.693759071117561,\n        \"num_unique_values\": 9,\n        \"samples\": [\n          1.6975308641975306,\n          3.415996425379802,\n          2.815712187958884\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
-            }
+            "text/plain": [
+              "                group_name  post/pre\n",
+              "0                  putin_z  2.950794\n",
+              "1  vladimir_vladimirovichp  3.415996\n",
+              "2            putin_govorit  2.349270\n",
+              "3               putintoday  3.693759\n",
+              "4             moskvaputinu  2.463181\n",
+              "5              putin_lider  2.815712\n",
+              "6                moy_putin  2.858974\n",
+              "7            putineveryday  1.697531\n",
+              "8                zogolovok  0.880663"
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
       ],
       "source": [
@@ -844,17 +846,27 @@
   ],
   "metadata": {
     "colab": {
+      "include_colab_link": true,
       "name": "user_reg_dynamics.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "pytorch2",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.11"
     }
   },
   "nbformat": 4,
