--- a/z_avatar_stats.ipynb
+++ b/z_avatar_stats.ipynb
@@ -12,18 +12,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "759ea936",
       "metadata": {
         "id": "759ea936"
       },
       "outputs": [],
       "source": [
+        "import datetime\n",
         "import os\n",
         "from pathlib import Path\n",
         "import pickle\n",
         "\n",
-        "import datetime\n",
         "import gdown\n",
         "import matplotlib.dates as mdates\n",
         "import matplotlib.pyplot as plt\n",
@@ -59,7 +59,7 @@
       },
       "outputs": [],
       "source": [
-        "DIRPATH_ROOT = Path(r'D:\\WORK\\zresult')\n",
+        "DIRPATH_ROOT = Path('content/zresult')\n",
         "GROUP_NAMES = ['putin_z']\n",
         "\n",
         "time_interval = '2021_22'\n",
@@ -80,13 +80,27 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "WD5Y3DpTyh98"
+      },
+      "outputs": [],
+      "source": [
+        "SRC_DATA_URL = ''\n",
+        "\n",
+        "!gdown -q --fuzzy --folder \"$SRC_DATA_URL\" -O \"$DIRPATH_ROOT\""
+      ],
+      "id": "WD5Y3DpTyh98"
+    },
+    {
       "cell_type": "markdown",
       "id": "78a4396e",
       "metadata": {
         "id": "78a4396e"
       },
       "source": [
-        "#### Analyze users' info: active, last seen, has an avatar"
+        "#### Settings"
       ]
     },
     {
@@ -98,14 +112,40 @@
       },
       "outputs": [],
       "source": [
-        "#### Load users' info from disk\n",
-        "for group in group_data.values():\n",
-        "    with open(group['fpath_users_info'], 'rb') as fid:\n",
-        "        users = pickle.load(fid)\n",
-        "    if isinstance(users, list):\n",
-        "        users = {user['id']: user for user in users}\n",
-        "    group['users'] = users"
+        "DIRPATH_ROOT = Path(r'D:\\WORK\\zresult\\TO_GDRIVE')\n",
+        "\n",
+        "time_interval = '2021_22'\n",
+        "#time_interval = 'all'\n",
+        "\n",
+        "if time_interval == '2021_22':\n",
+        "    GROUP_NAMES = ['putin_z', 'random_around_24Feb']\n",
+        "else:\n",
+        "    GROUP_NAMES = ['putin_z', 'random_1e6']\n",
+        "\n",
+        "# User idx for '2021_22' interval\n",
+        "USER_ID_RANGE_2021_22 = (6.82e8, 7.33e8)\n",
+        "\n",
+        "need_get_z_idx_from_fnames = False\n",
+        "\n",
+        "group_data = {}\n",
+        "for group_name in GROUP_NAMES:\n",
+        "    group_data[group_name] = {\n",
+        "        'name': group_name,\n",
+        "        'fpath_users_info': DIRPATH_ROOT / group_name / 'users.pkl',\n",
+        "        'dirpath_work': DIRPATH_ROOT / group_name,\n",
+        "        'fpaths_z': [DIRPATH_ROOT.parent / group_name / 'avatars' / f'{group_name}_z']\n",
+        "    }"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Analyze users' info: active, last seen, has an avatar"
+      ],
+      "metadata": {
+        "id": "fN2wDhhkHQtG"
+      },
+      "id": "fN2wDhhkHQtG"
     },
     {
       "cell_type": "code",
@@ -129,6 +169,18 @@
           ]
         }
       ],
+      "source": [
+        "#### Load users' info from disk\n",
+        "for group in group_data.values():\n",
+        "    with open(group['fpath_users_info'], 'rb') as fid:\n",
+        "        users = pickle.load(fid)\n",
+        "    if isinstance(users, list):\n",
+        "        users = {user['id']: user for user in users}\n",
+        "    group['users'] = users"
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         "def categorize_users(group):\n",
         "\n",
@@ -192,7 +244,7 @@
         "    Nactive = len(user_idx_active)\n",
         "    Nphoto = len(user_idx_photo)\n",
         "    Nseen = len(user_idx_seen_during_war)\n",
-        "    print(f'==== GROUP: {group_name} ====')\n",
+        "    print(f'==== GROUP: {group[\"name\"]} ====')\n",
         "    print(f'Total: {Nsampled}')\n",
         "    print(f'Active: {Nactive}  (active / total: {Nactive / Nsampled :.02f})')\n",
         "    print(f'With_photo: {Nphoto}  (with_photo / active: {Nphoto / Nactive :.02f})')\n",
@@ -203,7 +255,13 @@
         "#### Categorize the users\n",
         "for group in group_data.values():\n",
         "    categorize_users(group)"
-      ]
+      ],
+      "metadata": {
+        "id": "JdTGdLBjHZOD"
+      },
+      "id": "JdTGdLBjHZOD",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -238,20 +296,17 @@
       "source": [
         "def find_z_users(group):\n",
         "\n",
-        "    if need_get_z_idx_from_fnames:\n",
+        "    fpath_z_idx = group['dirpath_work'] / f'z_user_idx_{time_interval}.npy'\n",
+        "    if not fpath_z_idx.exists() or need_get_z_idx_from_fnames:\n",
         "        # Get indices of z-users from filenames\n",
         "        files = []\n",
         "        for fpath in group['fpaths_z']:\n",
         "            files += os.listdir(fpath)\n",
         "        user_idx_z = np.array([int(fname[:-4]) for fname in files])\n",
-        "\n",
         "        # Save the indices\n",
-        "        fpath_z_idx = group['dirpath_work'] / f'z_user_idx_{time_interval}.npy'\n",
         "        np.save(fpath_z_idx, user_idx_z)\n",
-        "\n",
         "    else:\n",
         "        # Load the indices\n",
-        "        fpath_z_idx = group['dirpath_work'] / f'z_user_idx_{time_interval}.npy'\n",
         "        user_idx_z = np.load(fpath_z_idx)\n",
         "\n",
         "    # Z-users who was seen during the war\n",
@@ -274,9 +329,9 @@
         "    # Print summary\n",
         "    Nz = len(user_idx_z)\n",
         "    Nz_seen = len(user_idx_z_seen_during_war)\n",
-        "    print(f'==== GROUP: {group_name} ====')\n",
-        "    print(f'Z_users: {Nz}  (Z_users / with_photo: {Nz / len(group[\"user_idx_photo\"]) :.02f})')\n",
-        "    print(f'Z_users seen during war: {Nz_seen}  (Z_users_seen / Z_users: {Nz_seen / Nz :.02f})')\n",
+        "    print(f'==== GROUP: {group[\"name\"]} ====')\n",
+        "    print(f'Z_users: {Nz}  (Z_users / with_photo: {Nz / len(group[\"user_idx_photo\"]) :.04f})')\n",
+        "    print(f'Z_users seen during war: {Nz_seen}  (Z_users_seen / Z_users: {Nz_seen / Nz :.04f})')\n",
         "    print()\n",
         "\n",
         "\n",
@@ -308,8 +363,8 @@
         "def calc_user_histograms(group):\n",
         "    # Histograms: all, active\n",
         "    nbins = 50\n",
-        "    h_all, hbins = np.histogram(group['user_idx'], nbins)\n",
-        "    h_active, _ = np.histogram(group['user_idx_active'], hbins)\n",
+        "    h_active, hbins = np.histogram(group['user_idx_active'], nbins)\n",
+        "    h_all, _ = np.histogram(group['user_idx'], hbins)\n",
         "    h_all_norm = h_all / np.sum(h_all)\n",
         "    h_active_norm = h_active / np.sum(h_active)\n",
         "\n",
@@ -363,21 +418,6 @@
         "            hbins_t.append(get_user_reg_date(int(hbin)))\n",
         "        hbins_t = np.asarray(hbins_t)\n",
         "\n",
-        "        # Fill None's\n",
-        "        hbins_tfix = hbins_t.copy()\n",
-        "        for n in range(1, len(hbins_t) - 1):\n",
-        "            if hbins_t[n] is None:\n",
-        "                tvec_L = np.flip(hbins_t[:n])\n",
-        "                tvec_R = hbins_t[(n + 1):]\n",
-        "                kL = np.argwhere(tvec_L != None)[0][0]\n",
-        "                kR = np.argwhere(tvec_R != None)[0][0]\n",
-        "                nL = n - kL - 1\n",
-        "                nR = n + kR + 1\n",
-        "                alpha = (hbins[n] - hbins[nL]) / (hbins[nR] - hbins[nL])\n",
-        "                tc = hbins_t[nL] + alpha * (hbins_t[nR] - hbins_t[nL])\n",
-        "                hbins_tfix[n] = tc\n",
-        "        hbins_t = hbins_tfix\n",
-        "\n",
         "        # Save ID-date mapping\n",
         "        df = pd.DataFrame({'ID': hbins.astype(int), 'reg_date': hbins_t})\n",
         "        df.to_csv(fpath_reg_dates, index=False)\n",
@@ -391,7 +431,9 @@
         "        # Check user ID consistency\n",
         "        hbins_loaded = df['ID'].to_numpy()\n",
         "        if not np.all(hbins_loaded == hbins.astype(int)):\n",
-        "            raise ValueError('Loaded user IDs are inconsistent with histogram bins')\n",
+        "            #raise ValueError('Loaded user IDs are inconsistent with histogram bins')\n",
+        "            print('Loaded user IDs are inconsistent with histogram bins')\n",
+        "            hist_bins_to_reg_dates(group, need_get_reg_dates=True)\n",
         "\n",
         "    group['hbins_t'] = hbins_t"
       ]
@@ -406,9 +448,10 @@
       "outputs": [],
       "source": [
         "#### Calculate user idx histograms and convert itx to reg dates\n",
-        "for group in group_data.values():\n",
+        "for group_name, group in group_data.items():\n",
+        "    print(group_name)\n",
         "    calc_user_histograms(group)\n",
-        "    hist_bins_to_reg_dates(group)"
+        "    hist_bins_to_reg_dates(group, need_get_reg_dates=False)"
       ]
     },
     {
@@ -449,32 +492,116 @@
         "    y_smooth = np.convolve(y, K, mode='same')\n",
         "    return y_smooth\n",
         "\n",
-        "def plot_with_dates(tvec, xvec, title_str, label, style='-', linewidth=1):\n",
-        "    ax = plt.gca()\n",
-        "    plt.xticks(rotation=70)\n",
-        "    plt.plot([], [])\n",
-        "    plt.plot(tvec, xvec, style, linewidth=linewidth, label=label)\n",
-        "    plt.xlabel('Days')\n",
-        "    plt.legend()\n",
+        "def plot_with_dates(tvec, xvec, title_str, label,\n",
+        "                    style='-', linewidth=1, ax=None):\n",
+        "    ax = ax or plt.gca()\n",
+        "    for tick in ax.get_xticklabels():\n",
+        "        tick.set_rotation(70)\n",
+        "    #ax.plot([], [])\n",
+        "    ax.plot(tvec, xvec, style, linewidth=linewidth, label=label)\n",
+        "    #plt.xlabel('Days')\n",
+        "    #ax.legend()\n",
+        "    ax.tick_params(axis=\"y\", colors=style[0])\n",
         "    plt.title(title_str)\n",
         "    if time_interval == '2021_22':\n",
         "        ax.xaxis.set_major_locator(mdates.DayLocator(interval=15))\n",
         "        ax.xaxis.set_major_formatter(mdates.DateFormatter('%d.%m.%y'))\n",
         "    else:\n",
-        "        ax.xaxis.set_major_locator(mdates.MonthLocator(interval=6))\n",
+        "        ax.xaxis.set_major_locator(mdates.MonthLocator(interval=12))\n",
         "        ax.xaxis.set_major_formatter(mdates.DateFormatter('%m.%y'))\n",
         "\n",
+        "def combined_legend(loc=None):\n",
+        "    handles, labels = [], []\n",
+        "    fig = plt.gcf()\n",
+        "    for ax_ in fig.axes:\n",
+        "        h, l = ax_.get_legend_handles_labels()\n",
+        "        handles.extend(h)\n",
+        "        labels.extend(l)\n",
+        "    loc = loc or 'best'\n",
+        "    plt.gca().legend(handles, labels, loc=loc)\n",
         "\n",
-        "perc_z_photo[np.isnan(perc_z_photo)] = 0\n",
-        "perc_warz_warphoto[np.isnan(perc_warz_warphoto)] = 0\n",
+        "cols = ['r', 'b']\n",
         "\n",
-        "#col = 'b'\n",
-        "col = 'r'\n",
-        "\n",
-        "# Plot number of users with photo\n",
-        "plot_with_dates(hbins_t[1:], h_photo, style=f'{col}', linewidth=1,\n",
-        "                title_str='Number of users with photo', label=GROUP_NAME)"
+        "def plot_group_data(group_data, var, title, legend_loc=None):\n",
+        "    ax = [plt.gca(), plt.gca().twinx()]\n",
+        "    for n, (group_name, group) in enumerate(group_data.items()):\n",
+        "        plot_with_dates(group['hbins_t'][1:], group[var], style=f'{cols[n]}',\n",
+        "                        title_str=title, label=group_name, ax=ax[n])\n",
+        "    combined_legend(legend_loc)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Plot number of users with photo\n",
+        "plt.figure(figsize=(7, 3))\n",
+        "plot_group_data(group_data, 'h_photo', 'Number of users with photo')"
+      ],
+      "metadata": {
+        "id": "7gtWWqDbHt-Y"
+      },
+      "id": "7gtWWqDbHt-Y",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Plot percentage of users with photo (# photo / # active)\n",
+        "plt.figure(figsize=(7, 3))\n",
+        "plot_group_data(group_data, 'perc_photo_act', 'Fraction of users with photo ( / active)')"
+      ],
+      "metadata": {
+        "id": "6OuoHCx-HvTz"
+      },
+      "id": "6OuoHCx-HvTz",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Smooth z-avatar hitograms\n",
+        "for group in group_data.values():\n",
+        "    group['h_z_sm'] = smooth(group['h_z'], 7)\n",
+        "    group['perc_z_photo_sm'] = smooth(group['perc_z_photo'], 7)"
+      ],
+      "metadata": {
+        "id": "5qXCggY9HwsG"
+      },
+      "id": "5qXCggY9HwsG",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Plot number of z-users\n",
+        "plt.figure(figsize=(7, 3))\n",
+        "plot_group_data(group_data, 'h_z_sm', 'Number of users with Z-photo')"
+      ],
+      "metadata": {
+        "id": "aqO6WcuRHyl0"
+      },
+      "id": "aqO6WcuRHyl0",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Plot percentage of z-users among the users with photo\n",
+        "plt.figure(figsize=(7, 4))\n",
+        "plot_group_data(group_data, 'perc_z_photo_sm',\n",
+        "                'Fraction of z-users ( / with_photo)',\n",
+        "                legend_loc='lower center')"
+      ],
+      "metadata": {
+        "id": "YjOjlrw6Hz6D"
+      },
+      "id": "YjOjlrw6Hz6D",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
